--- a/features/client/organisms/Header/Header.css
+++ b/features/client/organisms/Header/Header.css
@@ -2,9 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 8px 16px;
+  padding: 16px 32px;  
   background-color: var(--background-color);
   border-bottom: 1px solid var(--divider-color);
+
+  @media (max-width: 767px) {
+    padding: 8px 16px;
+  }
 }
 
 .logo {
