fix(ui): fix icons

--- a/features/main/layout/organisms/Header/organisms/SecondaryHeader/SecondaryHeader.css
+++ b/features/main/layout/organisms/Header/organisms/SecondaryHeader/SecondaryHeader.css
@@ -7,7 +7,8 @@
   border-bottom: 1px solid #EDEDEF;
 
   @media (max-width: 767px) {
-    padding: 8px 16px;
+    /* padding: 8px 16px; */
+    background-color: red !important;
   }
 }
 
