--- a/features/client/organisms/Menu/Menu.css
+++ b/features/client/organisms/Menu/Menu.css
@@ -6,15 +6,27 @@
   display: flex;
   margin-right: 40px;
 
+  @media (max-width: 767px) {
+    margin-right: 30px;
+  }
+
   &:hover svg {
     fill: var(--color-primary);
   }
 
-  &:last-of-type {
+  &:last-child {
     margin-right: 0;
   }
 }
 
-.icon {
-  margin-right: 8px;
+.menuItemText {
+  @media (max-width: 767px) {
+    display: none;
+  }
+}
+
+.consultation {
+  & .menuItemText {
+    margin-left: 8px;
+  }
 }
