--- a/features/client/organisms/Menu/Menu.css
+++ b/features/client/organisms/Menu/Menu.css
@@ -1,10 +1,14 @@
 .menu {
   display: flex;
+  align-items: center;
 }
 
 .menuItem {
   display: flex;
+  flex-shrink: 0;
+  align-items: center;
   margin-right: 40px;
+  line-height: 0 !important;
 
   @media (max-width: 767px) {
     margin-right: 30px;
