--- a/ui/molecules/Dropdown/Dropdown.css
+++ b/ui/molecules/Dropdown/Dropdown.css
@@ -8,7 +8,8 @@
 
 .dropdown {
   position: relative;
-  &:hover .menu {
+  &:hover .menu,
+  &:focus .menu {
     display: flex;
   }
 
@@ -48,8 +49,18 @@
   }
 }
 
-.link:hover {
-  border-bottom: 1px solid var(--color-link-underline);
+.link {
+  color: var(--color-link);
+
+  &:hover {
+    color: var(--color-link);
+    border-bottom: 1px solid var(--color-link-underline);
+  }
+
+  &:active {
+    color: var(--color-link);
+    border-bottom: 1px solid var(--color-link-underline);
+  }
 }
 
 .left {
