--- a/features/client/organisms/Menu/Menu.css
+++ b/features/client/organisms/Menu/Menu.css
@@ -8,7 +8,7 @@
   flex-shrink: 0;
   align-items: center;
   margin-right: 40px;
-  line-height: 0 !important;
+  line-height: 0;
 
   @media (max-width: 767px) {
     margin-right: 30px;
