--- a/ui/organisms/Footer/SecondaryFooter/SecondaryFooter.css
+++ b/ui/organisms/Footer/SecondaryFooter/SecondaryFooter.css
@@ -1,6 +1,7 @@
 .footer {
   padding: 24px 48px 32px 48px;
   background-color: var(--background-color);
+  border-top: 1px solid rgba(21,24,51,0.08);
 
   @media (max-width: 767px) {
     padding: 16px 16px 20px 16px;
@@ -31,6 +32,6 @@
   @media (max-width: 767px) {
     align-self: flex-start;
     height: 40px;
-    margin-bottom: 20px;
+    margin-bottom: 16px;
   }
 }
