fix(ui): fix footer position when content doesnt fill page fully

--- a/ui/config.css
+++ b/ui/config.css
@@ -67,5 +67,10 @@ body {
 @custom-media --mediumDown (max-width: 959px);
 
 #__next {
+  display: flex;
+  flex-direction: column;
+
+  height: 100%;
   overflow-x: hidden;
+
 }
