--- a/features/client/organisms/Layout/Layout.css
+++ b/features/client/organisms/Layout/Layout.css
@@ -1,4 +1,5 @@
 .page {
+  flex-grow: 1;
   padding-top: 40px;
   padding-bottom: 120px;
   background-color: var(--background-color);
@@ -6,4 +7,5 @@
   @media (--mediumDown) {
     padding-bottom: 80px;
   }
+
 }
