--- a/ui/organisms/EmergingFormElement/EmergingFormElement.css
+++ b/ui/organisms/EmergingFormElement/EmergingFormElement.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   width: 100%;
-  padding: 30px;
+  padding: 32px 0;
   margin-bottom: 26px;
   background-color: #F7F7F9;
 
