--- a/features/main/claim/organisms/secondStep/organisms/ClaimForm/ClaimForm.css
+++ b/features/main/claim/organisms/secondStep/organisms/ClaimForm/ClaimForm.css
@@ -106,12 +106,21 @@
   width: 100%;
 }
 
-.historyButton {
-  width: 100%;
+.addButton.addButton.addButton {
+  display: flex;
+  align-items: center;
+  align-self: flex-start;
   max-width: none;
+  max-height: 40px;
+  padding: 8px 16px;
   margin-top: 40px;
 }
 
 .text {
   margin: 0;
+}
+
+.icon {
+  display: inline-block;
+  margin-right: 8px;
 }
