--- a/features/main/claim/organisms/secondStep/organisms/ClaimForm/ClaimForm.css
+++ b/features/main/claim/organisms/secondStep/organisms/ClaimForm/ClaimForm.css
@@ -1,25 +1,33 @@
 .ClaimForm {
   position: relative;
   max-width: 800px;
-  padding: 0 0 112px 0;
+  padding: 0 0 40px 0;
   margin: 0 auto;
   text-align: left;
   background-color: #fff;
   box-shadow: 0 1px 3px 0 rgba(21,24,51,0.2);
 
   @media (max-width: 767px) {
-    padding: 0 0 96px 0;    
+    padding: 0 0 32px 0;    
   }
 }
 
 .title {
   margin: 0 0 24px 0;
   font: var(--title-medium);
+
+  @media (max-width: 767px) {
+    margin: 0 0 8px 0;    
+  }
 }
 
 .subtitle {
   margin: 40px 0 8px 0;
   font: var(--title-small);
+
+  @media (max-width: 767px) {
+    margin: 32px 0 8px 0;    
+  }
 }
 
 .article {
@@ -49,16 +57,18 @@
     width: 480px;
     max-width: 480px;
     margin: 0 auto;
+    margin-bottom: 104px;
     font: var(--text18-28);
 
   @media (max-width: 767px) {
     width: 100%;
     max-width: 328px;
+    margin-bottom: 96px;
   }
 }
 
   @media (max-width: 767px) {
-    padding: 32px 16px 24px 16px;
+    padding: 32px 16px 40px 16px;
   }
 
 }
@@ -96,10 +106,18 @@
 
 .historyComboWrapper {
   margin-right: 16px;
+
+  @media (max-width: 767px) {
+    flex-basis: 50%;
+  }
 }
 
 .historyCombo {
   width: 232px;
+
+  @media (max-width: 767px) {
+    width: 100%;
+  }
 }
 
 .historyComboSingle {
@@ -111,7 +129,6 @@
   align-items: center;
   align-self: flex-start;
   max-width: none;
-  max-height: 40px;
   padding: 8px 16px;
   margin-top: 40px;
 }
@@ -123,4 +140,29 @@
 .icon {
   display: inline-block;
   margin-right: 8px;
+  fill: var(--color-primary);
+}
+
+.iconBack {
+  margin-right: 4px;
+  fill: var(--color-primary);
+  transform: rotate(180deg);
+}
+
+.footerBack {
+  display: flex;
+  align-items: center;
+}
+
+.emergeField {
+
+  & .label:first-child {
+    margin-top: 0;
+  }
+
+  @media (max-width: 767px) {
+    &:last-of-type {
+      margin: 0;
+    }
+  }
 }
