--- a/ui/config.css
+++ b/ui/config.css
@@ -27,6 +27,7 @@ body {
   --title-small: 24px/32px var(--fontFamily-title);
   --title-bold: bold 16px/24px var(--fontFamily-bold);
 
+  --text-0: 0px/0px var(--fontFamily);
   --text18-28: 18px/28px var(--fontFamily);
   --text16-24: 16px/24px var(--fontFamily);
   --text14-20: 14px/20px var(--fontFamily);
