--- a/features/main/claim/organisms/secondStep/organisms/ClaimForm/ClaimForm.css
+++ b/features/main/claim/organisms/secondStep/organisms/ClaimForm/ClaimForm.css
@@ -104,7 +104,7 @@
   }
 }
 
-.historyComboWrapper {
+.historyComboWrapper.historyComboWrapper {
   margin-right: 16px;
 
   @media (max-width: 767px) {
