--- a/features/main/claim/organisms/secondStep/organisms/ClaimForm/ClaimForm.css
+++ b/features/main/claim/organisms/secondStep/organisms/ClaimForm/ClaimForm.css
@@ -107,6 +107,10 @@
 .historyComboWrapper.historyComboWrapper {
   margin-right: 16px;
 
+  &:last-of-type {
+    margin-right: 0;
+  }
+
   @media (max-width: 767px) {
     flex-basis: 50%;
   }
