--- a/ui/organisms/ProgressBar/ProgressBar.css
+++ b/ui/organisms/ProgressBar/ProgressBar.css
@@ -5,8 +5,12 @@
   max-width: 800px;
   margin: 0 auto;
   background-color: inherit;
-  background-image: linear-gradient(to top, transparent 28px, #9F9FA8 1px, transparent 29px);
+  background-image: linear-gradient(to top, transparent 30%, #9F9FA8 1px, transparent calc(30% + 1px));
   background-position: top;
+
+  @media (max-width: 767px) {
+    background-image: linear-gradient(to top, transparent 45%, #9F9FA8 1px, transparent calc(45% + 1px));
+  }
 }
 
 .ProgressBarItem {
