--- a/features/main/claim/organisms/thirdStep/organisms/ClaimForm/ClaimForm.css
+++ b/features/main/claim/organisms/thirdStep/organisms/ClaimForm/ClaimForm.css
@@ -86,6 +86,11 @@
   margin: 16px 0 8px 0;
 }
 
+.checkboxLabel {
+  margin: 24px 0 8px 0;
+  color: #151833;
+}
+
 .emergingLabel {
   z-index: 1;
   margin-top: 0;
@@ -169,6 +174,7 @@
   }
 }
 
-.checkbox.checkbox  {
-  margin-right: 14px;
+.checkbox.checkbox {
+  display: flex;
+  margin: 24px 0 8px 0;
 }
