--- a/features/common/formHOCs/withTooltip/index.css
+++ b/features/common/formHOCs/withTooltip/index.css
@@ -1,11 +1,10 @@
 .wrapper {
   position: relative;
+  transition: height 0.3s ease;
 }
 
 .error {
-  position: absolute;
-  top: calc(100% + 4px);
-  left: 0;
+  margin-top: 4px;
   font: var(--text14-20);
   color: var(--color-danger);
 }
