--- a/ui/atoms/Input/Input.css
+++ b/ui/atoms/Input/Input.css
@@ -11,6 +11,6 @@
   margin-bottom: 8px;
 }
 
-.error.error.error {
-  box-shadow: 0 0 0 1px var(--color-danger);
+.error {
+  box-shadow: 0 0 0 1px var(--color-danger) !important;
 }
