--- a/features/main/layout/organisms/Header/Header.css
+++ b/features/main/layout/organisms/Header/Header.css
@@ -2,4 +2,13 @@
   display: flex;
   justify-content: space-between;
   padding: 24px 48px;
+  border-bottom: 1px solid rgba(21,24,51,0.08);
+
+  @media (max-width: 767px) {
+    padding: 16px 8px;
+  }
+}
+
+.headerWrapper {
+  display: block;
 }
