--- a/ui/atoms/Select/Select.css
+++ b/ui/atoms/Select/Select.css
@@ -37,7 +37,8 @@
 
 .ant-select-dropdown {
   padding: 8px 0;
-  box-shadow: 0 0 1px 1px rgba(21,24,51,0.04), 0 4px 12px 0 rgba(21,24,51,0.12);
+  box-shadow: 0 0 1px 1px rgba(21, 24, 51, 0.04),
+    0 4px 12px 0 rgba(21, 24, 51, 0.12);
 }
 
 .ant-select-dropdown-menu-item {
@@ -46,7 +47,7 @@
   white-space: initial;
 
   &:hover {
-    background-color: #F7F6F2;
+    background-color: #f7f6f2;
   }
 }
 
@@ -56,7 +57,7 @@
 }
 
 .ant-select-dropdown-menu-item-active {
-  background-color: #F7F6F2;  
+  background-color: #f7f6f2;
 }
 
 .ant-select-selection-selected-value {
@@ -77,12 +78,18 @@
 }
 
 .ant-select-disabled .ant-select-selection {
-  color: #B3B4C8;
-  background-color: #EFEFF4;
+  color: #b3b4c8;
+  background-color: #efeff4;
 }
 
 .ant-select-disabled .ant-select-selection-selected-value {
   &::after {
     display: none;
+  }
+}
+
+.error {
+  & .ant-select-selection {
+    box-shadow: 0 0 0 1px var(--color-danger) !important;
   }
 }
