--- a/features/client/features/progressBar/molecule/StepPointer/StepPointer.css
+++ b/features/client/features/progressBar/molecule/StepPointer/StepPointer.css
@@ -18,6 +18,8 @@
 }
 
 .title {
+  margin: 0;
+  margin-bottom: 12px;
   font: var(--text14-20);
   white-space: nowrap;
 
@@ -62,4 +64,8 @@
     border: 1px solid #9F9FA8;
     fill: #9F9FA8;
   }
+}
+
+.titleDisabled {
+  color: #9F9FA8;
 }
