--- a/features/main/claim/organisms/waitingAnswer/page/WaitingAnswer.css
+++ b/features/main/claim/organisms/waitingAnswer/page/WaitingAnswer.css
@@ -1,7 +1,9 @@
 .waitingAnswer {
+  padding: 48px 0 120px 0;
+  background-color: #fff;
 
   @media (max-width: 767px) {
-    padding: 0 16px 80px 16px;
+    padding: 24px 16px 80px 16px;
   }
 }
 
@@ -21,4 +23,12 @@
 .text {
   max-width: 560px;
   margin: 0;
+}
+
+.progressBar.progressBar {
+  margin-bottom: 36px;
+
+  @media (max-width: 767px) {
+    width: 272px;
+  }
 }
