--- a/ui/config.css
+++ b/ui/config.css
@@ -25,7 +25,7 @@ body {
   --title-regular: 40px/48px var(--fontFamily-title);
   --title-medium: 32px/40px var(--fontFamily-title);
   --title-small: 24px/32px var(--fontFamily-title);
-  --title-bold: bold 16px/24px var(--fontFamily-bold);
+  --title-bold: bold 16px/24px var(--fontFamily-title);
 
   --text-0: 0px/0px var(--fontFamily);
   --text18-28: 18px/28px var(--fontFamily);
@@ -38,7 +38,7 @@ body {
     --title-regular: 28px/32px var(--fontFamily-title);
     --title-medium: 24px/32px var(--fontFamily-title);
     --title-small: 20px/28px var(--fontFamily-title);
-    --title-bold: bold 16px/24px var(--fontFamily);
+    --title-bold: bold 16px/24px var(--fontFamily-title);
   }
 
   /* colors */
