--- a/features/client/features/newClaim/organisms/ClaimForm/ClaimForm.css
+++ b/features/client/features/newClaim/organisms/ClaimForm/ClaimForm.css
@@ -5,10 +5,10 @@
   margin: 0 auto;
   text-align: left;
   background-color: #fff;
-  box-shadow: 0 1px 3px 0 rgba(21,24,51,0.2);
+  box-shadow: 0 1px 3px 0 rgba(21, 24, 51, 0.2);
 
   @media (max-width: 767px) {
-    padding: 0 0 32px 0;    
+    padding: 0 0 32px 0;
   }
 }
 
@@ -29,7 +29,7 @@
     width: 100%;
     height: 1px;
     content: '';
-    background-color: rgba(21,24,51,0.12);
+    background-color: rgba(21, 24, 51, 0.12);
   }
 
   &:last-of-type {
@@ -46,20 +46,20 @@
     margin: 0 auto;
     font: var(--text18-28);
 
-  @media (max-width: 767px) {
-    width: 100%;
-    max-width: 328px;
+    @media (max-width: 767px) {
+      width: 100%;
+      max-width: 328px;
+    }
   }
-}
 
   @media (max-width: 767px) {
     padding: 32px 16px 24px 16px;
   }
-
 }
 
 .label {
-  margin: 24px 0 8px 0;
+  display: block;
+  margin: 0 0 8px 0;
   line-height: 1.5;
   color: #151833;
 }
@@ -67,8 +67,13 @@
 .emergingLabel {
   z-index: 1;
   margin-top: 0;
+  margin-bottom: 8px;
 }
 
 .secondaryText {
-  color: #82839B;
+  color: #82839b;
+}
+
+.field {
+  margin-bottom: 24px;
 }
