--- a/features/client/features/consultation/organisms/Theme/Theme.css
+++ b/features/client/features/consultation/organisms/Theme/Theme.css
@@ -1,5 +1,6 @@
 .theme {
-  padding: 48px 120px 120px;
+  padding: 48px 120px 64px;
+  margin-bottom: 48px;
   background-color: #fff;
   box-shadow: 0 0 1px 1px rgba(63,63,68,0.04), 0 1px 3px 0 rgba(63,63,68,0.16);
 }
@@ -21,20 +22,23 @@
   justify-content: space-between;
 }
 
+.text {
+  margin: 0 0 8px 0;  
+}
+
 .infoBlock {
   margin: 0 0 24px 0;
 
   &:last-of-type {
     margin-bottom: 0;
+
+    & .text {
+      margin-bottom: 0;
+    }
   }
 }
 
 .subtitle {
   margin: 0 0 8px 0;
   font: var(--title-bold);
-}
-
-
-.text {
-  margin: 0 0 8px 0;  
 }
