--- a/features/client/features/consultation/organisms/ExpertAnswers/ExpertAnswers.css
+++ b/features/client/features/consultation/organisms/ExpertAnswers/ExpertAnswers.css
@@ -16,8 +16,10 @@
 
   &:last-of-type {
     margin-bottom: 0;
-    & .answer:last-of-type {
-        margin: 0;
+
+    & .answer {
+        margin-bottom: 0;
+        background-color: orange;
       }
   }
 }
