--- a/features/client/features/consultation/organisms/ExpertAnswers/ExpertAnswers.css
+++ b/features/client/features/consultation/organisms/ExpertAnswers/ExpertAnswers.css
@@ -3,6 +3,11 @@
   margin-bottom: 64px;
   background-color: #fff;
   border-top: 3px solid var(--color-highlight);
+
+  @media (max-width: 767px) {
+    padding: 28px 16px 40px;
+    margin-bottom: 48px;
+  }
 }
 
 .answer {
@@ -10,32 +15,56 @@
   margin: 0 0 24px 0;
   background-color: #F7F6F2;
   border-radius: 16px;
+
+  @media (max-width: 767px) {
+    padding: 12px 12px;
+  }
 }
 
-.article {
-  margin-bottom: 48px;
-
+.articleWrapper {
   &:last-of-type {
     margin-bottom: 0;
 
     & .answer {
         margin-bottom: 0;
-        background-color: orange;
       }
+
+
+    @media (max-width: 767px) {
+      margin-bottom: 32px;
+    }
+  }
+}
+
+.article {
+  margin-bottom: 48px;
+
+  @media (max-width: 767px) {
+    margin-bottom: 24px;
   }
 }
 
 .mainTitle {
   margin: 0 0 24px 0;
   font: var(--title-regular);
+
+  @media (max-width: 767px) {
+    padding: 0 16px;
+    margin-bottom: 16px;
+  }
 }
 
 .title {
   margin: 0 0 24px 0;
   font: var(--title-medium);
+
+  @media (max-width: 767px) {
+    margin: 0 0 16px 0;    
+  }
 }
 
 .question {
   margin: 0 0 8px 0;
   font: var(--title-bold);
+  white-space: pre-line
 }
