--- a/features/client/features/consultation/organisms/QuestionNotification/QuestionNotification.css
+++ b/features/client/features/consultation/organisms/QuestionNotification/QuestionNotification.css
@@ -1,11 +1,20 @@
 .questionNotification {
   margin-bottom: 72px;
   text-align: center;
+
+  @media (max-width: 767px) {
+    padding: 0 16px;
+    margin-bottom: 48px;
+  }
 }
 
 .title {
   margin: 0 0 24px 0;
   font: var(--title-medium);
+
+  @media (max-width: 767px) {
+    margin: 0 0 24px 0;
+  }
 }
 
 .text {
@@ -18,4 +27,5 @@
   display: inline-block;
   padding: 20px 36px;
   margin-bottom: 24px;
+  white-space: nowrap;
 }
