--- a/features/client/features/consultation/organisms/Theme/Theme.css
+++ b/features/client/features/consultation/organisms/Theme/Theme.css
@@ -3,11 +3,20 @@
   margin-bottom: 48px;
   background-color: #fff;
   box-shadow: 0 0 1px 1px rgba(63,63,68,0.04), 0 1px 3px 0 rgba(63,63,68,0.16);
+
+  @media (max-width: 767px) {
+    padding: 32px 16px 48px;
+    margin-bottom: 40px;
+  }
 }
 
 .title {
   margin: 0 0 24px 0;
   font: var(--title-medium);
+
+  @media (max-width: 767px) {
+    margin: 0 0 16px 0;
+  }
 }
 
 .article {
@@ -15,6 +24,10 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 48px;
+
+  @media (max-width: 767px) {
+    padding: 0 0 32px;
+  }
 }
 
 .content {
