--- a/features/client/features/consultation/organisms/Theme/components/Digest/Digest.css
+++ b/features/client/features/consultation/organisms/Theme/components/Digest/Digest.css
@@ -14,5 +14,13 @@
     margin: 0 -120px;
     content: '';
     background-color: rgba(21,24,51,0.12);
+
+    @media (max-width: 767px) {
+      bottom: 32px;
+    }
+  }
+
+  @media (max-width: 767px) {
+    padding-bottom: 64px;
   }
 }
