--- a/features/client/features/waitingAnswer/page/WaitingAnswer.css
+++ b/features/client/features/waitingAnswer/page/WaitingAnswer.css
@@ -1,19 +1,13 @@
-.waitingAnswer {
-  padding: 48px 0 120px 0;
-  background-color: #fff;
-
-  @media (max-width: 767px) {
-    padding: 24px 16px 80px 16px;
-  }
-}
-
 .logo {
+  display: flex;
+  justify-content: center;
   margin-bottom: 28px;
 }
 
 .title {
   margin-bottom: 28px;
   font: var(--title-medium);
+  text-align: center;
 
   @media (max-width: 767px) {
     margin-bottom: 16px;
@@ -22,7 +16,8 @@
 
 .text {
   max-width: 560px;
-  margin: 0;
+  margin: auto;
+  text-align: center;
 }
 
 .progressBar.progressBar {
