--- a/features/client/features/consultation/organisms/Header/Header.css
+++ b/features/client/features/consultation/organisms/Header/Header.css
@@ -3,9 +3,8 @@
   align-items: baseline;
   margin-bottom: 16px;
 
-
   @media (max-width: 767px) {
-    padding: 24px 16px 16px;
+    padding: 0 16px 16px;
     margin: 0;
   }
 }
