--- a/features/client/organisms/Layout/Layout.css
+++ b/features/client/organisms/Layout/Layout.css
@@ -4,8 +4,8 @@
   padding-bottom: 120px;
   background-color: var(--background-color);
 
-  @media (--mediumDown) {
-    padding-top: 0;
+  @media (--smallDown) {
+    padding-top: 24px;
     padding-bottom: 80px;
   }
 
