feat(client): add Chat component

--- a/features/client/organisms/Layout/Layout.css
+++ b/features/client/organisms/Layout/Layout.css
@@ -1,5 +1,5 @@
 .page {
-  flex-grow: 1;
+  position: relative;
   padding-top: 40px;
   padding-bottom: 120px;
   background-color: var(--background-color);
