--- a/features/client/organisms/Header/Header.css
+++ b/features/client/organisms/Header/Header.css
@@ -3,7 +3,7 @@
   flex-shrink: 0;
   align-items: center;
   justify-content: space-between;
-  padding: 16px 32px;  
+  padding: 8px 32px 9px 32px;  
   background-color: var(--background-color);
   border-bottom: 1px solid var(--divider-color);
 
