refactor(ui): change color and media values to variables

--- a/features/client/features/claims/atoms/Point/Point.css
+++ b/features/client/features/claims/atoms/Point/Point.css
@@ -6,9 +6,9 @@
 }
 
 .active {
-  background-color: #FFD46D;
+  background-color: var(--color-highlight);
 }
 
 .inactive {
-  background-color: #B3B4C8;
+  background-color: var(--color-default);
 }
