--- a/features/client/features/consultation/organisms/AnswerNotification/AnswerNotification.css
+++ b/features/client/features/consultation/organisms/AnswerNotification/AnswerNotification.css
@@ -7,7 +7,7 @@
   border-top: 3px solid var(--color-highlight);
   box-shadow: 0 0 4px 0 rgba(63,63,68,0.04), 0 0 16px 0 rgba(63,63,68,0.12);
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     padding: 20px 16px 24px;
     margin-bottom: 16px;
   }
