--- a/features/main/layout/organisms/Header/Header.css
+++ b/features/main/layout/organisms/Header/Header.css
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: space-between;
   padding: 24px 48px;
-  border-bottom: 1px solid rgba(21,24,51,0.08);
+  border-bottom: 1px solid var(--divider-color);
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     padding: 16px 8px;
   }
 }
