--- a/ui/antd-custom.less
+++ b/ui/antd-custom.less
@@ -6,8 +6,8 @@
 @background-color-light : hsv(0, 0, 98%); // background of header and selected item
 @background-color-base : hsv(0, 0, 96%); // Default grey background color
 // FONTS
-@heading-color          : #151833;
-@text-color             : #151833;
+@heading-color          : var(--text-color-primary);
+@text-color             : var(--text-color-primary);
 @text-color-secondary   : #82839B;
 @font-size-base: 16px; // major text font size
 //OTHER
