--- a/features/client/features/consultation/organisms/Company/Company.css
+++ b/features/client/features/consultation/organisms/Company/Company.css
@@ -2,7 +2,7 @@
   display: flex;
   margin-bottom: 24px;
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     margin-bottom: 16px;
   }
 }
