--- a/features/client/features/consultation/organisms/ExpertAnswers/ExpertAnswers.css
+++ b/features/client/features/consultation/organisms/ExpertAnswers/ExpertAnswers.css
@@ -4,7 +4,7 @@
   background-color: #fff;
   border-top: 3px solid var(--color-highlight);
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     padding: 28px 16px 40px;
     margin-bottom: 48px;
   }
@@ -16,7 +16,7 @@
   background-color: #F7F6F2;
   border-radius: 16px;
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     padding: 12px 12px;
   }
 }
@@ -30,7 +30,7 @@
       }
 
 
-    @media (max-width: 767px) {
+    @media (--smallDown) {
       margin-bottom: 32px;
     }
   }
@@ -39,7 +39,7 @@
 .article {
   margin-bottom: 48px;
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     margin-bottom: 24px;
   }
 }
@@ -48,7 +48,7 @@
   margin: 0 0 24px 0;
   font: var(--title-regular);
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     padding: 0 16px;
     margin-bottom: 16px;
   }
@@ -58,7 +58,7 @@
   margin: 0 0 24px 0;
   font: var(--title-medium);
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     margin: 0 0 16px 0;    
   }
 }
