--- a/features/client/features/consultation/organisms/QuestionNotification/QuestionNotification.css
+++ b/features/client/features/consultation/organisms/QuestionNotification/QuestionNotification.css
@@ -2,7 +2,7 @@
   margin-bottom: 72px;
   text-align: center;
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     padding: 0 16px;
     margin-bottom: 48px;
   }
@@ -12,7 +12,7 @@
   margin: 0 0 24px 0;
   font: var(--title-medium);
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     margin: 0 0 24px 0;
   }
 }
