--- a/features/client/features/consultation/organisms/Theme/Theme.css
+++ b/features/client/features/consultation/organisms/Theme/Theme.css
@@ -4,7 +4,7 @@
   background-color: #fff;
   box-shadow: 0 0 1px 1px rgba(63,63,68,0.04), 0 1px 3px 0 rgba(63,63,68,0.16);
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     padding: 32px 16px 48px;
     margin-bottom: 40px;
   }
@@ -14,7 +14,7 @@
   margin: 0 0 24px 0;
   font: var(--title-medium);
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     margin: 0 0 16px 0;
   }
 }
@@ -25,7 +25,7 @@
   flex-direction: column;
   padding-bottom: 48px;
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     padding: 0 0 32px;
   }
 }
@@ -35,7 +35,7 @@
   justify-content: space-between;
 
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     flex-direction: column;
   }
 }
@@ -50,7 +50,7 @@
   &:last-of-type {
     margin-bottom: 0;
 
-    @media (max-width: 767px) {
+    @media (--smallDown) {
       margin-bottom: 24px;
     }
 
