--- a/features/client/features/newClaim/organisms/ClaimForm/ClaimForm.css
+++ b/features/client/features/newClaim/organisms/ClaimForm/ClaimForm.css
@@ -7,7 +7,7 @@
   background-color: #fff;
   box-shadow: 0 1px 3px 0 rgba(21,24,51,0.2);
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     padding: 0 0 32px 0;    
   }
 }
@@ -46,13 +46,13 @@
     margin: 0 auto;
     font: var(--text18-28);
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     width: 100%;
     max-width: 328px;
   }
 }
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     padding: 32px 16px 24px 16px;
   }
 
@@ -61,7 +61,7 @@
 .label {
   margin: 24px 0 8px 0;
   line-height: 1.5;
-  color: #151833;
+  color: var(--text-color-primary);
 }
 
 .emergingLabel {
