--- a/features/client/features/progressBar/organisms/ProgressBar/ProgressBar.css
+++ b/features/client/features/progressBar/organisms/ProgressBar/ProgressBar.css
@@ -8,7 +8,7 @@
   background-image: linear-gradient(to top, transparent 30%, #9F9FA8 1px, transparent calc(30% + 1px));
   background-position: top;
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     background-image: linear-gradient(to top, transparent 45%, #9F9FA8 1px, transparent calc(45% + 1px));
   }
 }
