--- a/features/client/organisms/Header/Header.css
+++ b/features/client/organisms/Header/Header.css
@@ -7,7 +7,7 @@
   background-color: var(--background-color);
   border-bottom: 1px solid var(--divider-color);
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     padding: 8px 16px;
   }
 }
