--- a/features/main/claim/organisms/thirdStep/organisms/ClaimForm/ClaimForm.css
+++ b/features/main/claim/organisms/thirdStep/organisms/ClaimForm/ClaimForm.css
@@ -7,7 +7,7 @@
   background-color: #fff;
   box-shadow: 0 1px 3px 0 rgba(21,24,51,0.2);
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     padding: 0 0 32px 0;    
   }
 }
@@ -16,7 +16,7 @@
   margin: 0 0 24px 0;
   font: var(--title-medium);
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     margin: 0 0 8px 0;    
   }
 }
@@ -25,7 +25,7 @@
   margin: 40px 0 8px 0;
   font: var(--title-small);
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     margin: 32px 0 8px 0;    
   }
 }
@@ -60,14 +60,14 @@
     margin-bottom: 104px;
     font: var(--text18-28);
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     width: 100%;
     max-width: 328px;
     margin-bottom: 96px;
   }
 }
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     padding: 32px 16px 40px 16px;
   }
 
@@ -78,7 +78,7 @@
   display: block;
   margin: 24px 0 8px 0;
   line-height: 1.5;
-  color: #151833;
+  color: var(--text-color-primary);
 }
 
 .labelSmall {
@@ -88,7 +88,7 @@
 
 .checkboxLabel {
   margin: 24px 0 8px 0;
-  color: #151833;
+  color: var(--text-color-primary);
 }
 
 .emergingLabel {
@@ -116,7 +116,7 @@
     margin-right: 0;
   }
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     flex-basis: 50%;
   }
 }
@@ -124,7 +124,7 @@
 .historyCombo {
   width: 232px;
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     width: 100%;
   }
 }
