--- a/ui/atoms/Input/AntInput.css
+++ b/ui/atoms/Input/AntInput.css
@@ -3,7 +3,7 @@
   height: auto;
   padding: 12px 44px 12px 16px;
   font: var(--text16-24);
-  color: #151833;
+  color: var(--text-color-primary);
   border: none;
   box-shadow: 0 0 0 1px #d9d9d9;
 
