--- a/ui/atoms/TextArea/TextArea.css
+++ b/ui/atoms/TextArea/TextArea.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   min-height: 60px;
   font: var(--text16-24);
-  color: #151833;
+  color: var(--text-color-primary);
   border: none;
   box-shadow: 0 0 0 1px #d9d9d9;
 
