--- a/ui/molecules/Combobox/Combobox.css
+++ b/ui/molecules/Combobox/Combobox.css
@@ -72,7 +72,7 @@
 }
 
 .ant-select-disabled .ant-select-selection {
-  color: #B3B4C8;
+  color: var(--color-default);
   background-color: #EFEFF4;
 }
 
