--- a/ui/molecules/Dropdown/Dropdown.css
+++ b/ui/molecules/Dropdown/Dropdown.css
@@ -36,7 +36,7 @@
   border-bottom: 1px solid #EDEDEF;
 
   &:hover {
-    color: #151833;
+    color: var(--text-color-primary);
     background-color: #F7F7F9;
     border-bottom: 1px solid #EDEDEF;
   }
