--- a/ui/organisms/EmergingFormElement/EmergingFormElement.css
+++ b/ui/organisms/EmergingFormElement/EmergingFormElement.css
@@ -38,7 +38,7 @@
     content: '';
     background-color: #F7F7F9;
 
-    @media (max-width: 767px) {
+    @media (--smallDown) {
       padding: 0 16px;
       margin: 0 -16px;
     }
