--- a/ui/organisms/Footer/components/Menu/MenuShort.css
+++ b/ui/organisms/Footer/components/Menu/MenuShort.css
@@ -1,5 +1,5 @@
 .menu {
-   @media (max-width: 767px) {
+   @media (--smallDown) {
      display: flex;
     flex-direction: column;
     width: 100%;
@@ -13,7 +13,7 @@
     margin-right: 0;
   }
 
-   @media (max-width: 767px) {
+   @media (--smallDown) {
     padding: 8px 0;
     margin: 0;
     border-bottom: 1px solid #EDEDEF;
