--- a/ui/organisms/Footer/components/Partners/Partners.css
+++ b/ui/organisms/Footer/components/Partners/Partners.css
@@ -2,7 +2,7 @@
   display: flex;
   margin-bottom: 32px;
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     flex-direction: column;
   }
 }
@@ -22,7 +22,7 @@
     margin-right: 0;
   }
 
-  @media (max-width: 767px) {
+  @media (--smallDown) {
     width: 100%;
     margin-right: 0;
     margin-bottom: 12px;
@@ -36,7 +36,7 @@
 .text {
   margin: 0 20px 0 0;
   font: var(--text12-16);
-  color: #616681;
+  color: var(--text-color-secondary);
 }
 
 .logo {
