--- a/features/client/features/consultation/organisms/Chat/components/Message/Message.css
+++ b/features/client/features/consultation/organisms/Chat/components/Message/Message.css
@@ -8,6 +8,12 @@
   border-radius: 16px 16px 16px 0;
 }
 
+.messageSent {
+  margin-left: auto;
+  background-color: #FFEAB7;
+  border-radius: 16px 16px 0 16px;
+}
+
 .author {
   margin: 8px 0 4px;
   font-weight: bold;
