feat(client): add onCloseButtonClick to chat

--- a/features/client/features/consultation/Consultation.css
+++ b/features/client/features/consultation/Consultation.css
@@ -1,6 +1,10 @@
 .wrapper {
   display: flex;
   padding-right: 400px;
+
+  @media (--mediumDown) {
+    padding-right: 0;
+  }
 }
 
 .layoutWrapper {
