--- a/features/client/features/consultation/organisms/Chat/Chat.css
+++ b/features/client/features/consultation/organisms/Chat/Chat.css
@@ -9,6 +9,10 @@
   max-width: 400px;
   height: 100vh;
   box-shadow: 0 0 8px 0 rgba(63,63,68,0.04), 0 0 20px 0 rgba(63,63,68,0.12);
+
+  @media (--mediumDown) {
+    display: none;
+  }
 }
 
 .messageWrapper {
