fix(client): update closing chat logic

--- a/features/client/features/consultation/Consultation.css
+++ b/features/client/features/consultation/Consultation.css
@@ -1,6 +1,6 @@
 .wrapper {
   display: flex;
-  padding-right: 400px;
+  padding-right: 0;
 
   @media (--mediumDown) {
     padding-right: 0;
@@ -9,4 +9,8 @@
 
 .layoutWrapper {
   flex-grow: 1;
+}
+
+.openChat {
+  padding-right: 400px;
 }
