--- a/features/client/features/consultation/organisms/Chat/components/Message/Message.css
+++ b/features/client/features/consultation/organisms/Chat/components/Message/Message.css
@@ -6,6 +6,7 @@
   font: var(--text14-20);
   background-color: #fff;
   border-radius: 16px 16px 16px 0;
+  box-shadow: 0 0 3px 0 rgba(0,0,0,0.06);
 }
 
 .messageSent {
