--- a/features/client/features/consultation/organisms/Theme/components/Digest/Digest.css
+++ b/features/client/features/consultation/organisms/Theme/components/Digest/Digest.css
@@ -24,3 +24,24 @@
     padding-bottom: 64px;
   }
 }
+
+.openChatButton {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  width: 56px;
+  height: 56px;
+  cursor: pointer;
+  background-color: #fff;
+  border: 1px solid var(--divider-color);
+  border-radius: 50%;
+  box-shadow: 0 0 5px 0 rgba(0,0,0,0.06);
+
+  @media (--mediumDown) {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    margin: 108px 12px 0 0;
+  }
+}
