--- a/features/client/features/consultation/organisms/Chat/components/Header/Header.css
+++ b/features/client/features/consultation/organisms/Chat/components/Header/Header.css
@@ -20,8 +20,13 @@
 }
 
 .closeButton {
+  display: none;
   margin-left: auto;
   cursor: pointer;
+
+  @media (--mediumDown) {
+    display: flex;
+  }
 }
 
 .buttonChat {
