--- a/features/client/features/beforeConsultation/BeforeConsultation.css
+++ b/features/client/features/beforeConsultation/BeforeConsultation.css
@@ -3,14 +3,21 @@
   background-color: #fff;
 
   @media (--smallDown) {
-    padding: 24px 16px 80px 16px;
+    padding: 0 0 48px 0;
   }
 }
 
 .logo {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 28px;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 16px;
+
+
+  @media (--smallDown) {
+    width: 72px;
+    height: 64px;
+    margin-bottom: 8px;
+  }
 }
 
 .title {
@@ -20,8 +27,9 @@
   text-align: center;
 
   @media (--smallDown) {
+    max-width: 328px;
     padding: 0 16px;
-    margin-bottom: 16px;
+    margin-bottom: 24px;
   }
 }
 
@@ -31,7 +39,9 @@
   text-align: center;
 
   @media (--smallDown) {
+    max-width: 328px;
     padding: 0 16px;
+    margin-bottom: 32px;
   }
 }
 
@@ -42,15 +52,20 @@
 
 .article {
   position: relative;
-  padding: 48px 160px 56px 160px;
+  max-width: 480px;
+  padding: 48px 0 56px 0;
+  margin: 0 auto;
   font: var(--text16-24);
 
   &::after {
     position: absolute;
     bottom: 0;
     left: 0;
+    box-sizing: content-box;
     width: 100%;
     height: 1px;
+    padding: 0 160px;
+    margin: 0 -160px;
     content: '';
     background-color: rgba(21,24,51,0.12);
   }
