fix(client): minor chat fixes
META: y

--- a/ui/organisms/Footer/components/Menu/MenuShort.css
+++ b/ui/organisms/Footer/components/Menu/MenuShort.css
@@ -9,6 +9,10 @@
 .link {
   margin-right: 32px;
 
+  &:focus {
+    border-bottom: 1px solid #EDEDEF;
+  }
+
   &:last-of-type {
     margin-right: 0;
   }
