--- a/features/client/features/consultation/organisms/Theme/Theme.css
+++ b/features/client/features/consultation/organisms/Theme/Theme.css
@@ -1,5 +1,5 @@
 .theme {
-  padding: 48px 120px 64px;
+  padding: 48px 0 64px;
   margin-bottom: 48px;
   background-color: #fff;
   box-shadow: 0 0 1px 1px rgba(63,63,68,0.04), 0 1px 3px 0 rgba(63,63,68,0.16);
@@ -23,10 +23,12 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  max-width: 560px;
   padding-bottom: 48px;
+  margin: 0 auto;
 
   @media (--smallDown) {
-    padding: 0 0 32px;
+    padding: 0 16px 32px;
   }
 }
 
