--- a/features/client/features/consultation/organisms/Theme/components/Footer/Footer.css
+++ b/features/client/features/consultation/organisms/Theme/components/Footer/Footer.css
@@ -1,8 +1,14 @@
 .footer {
   display: flex;
+  max-width: 560px;
   padding: 16px 0 0 0;
+  margin: 0 auto;
   font: var(--text12-16);
   border-top: 1px solid  rgba(21,24,51,0.12);
+
+  @media (--smallDown) {
+    padding: 16px 16px 16px 0;
+  }
 }
 
 .item {
