--- a/ui/config.css
+++ b/ui/config.css
@@ -17,6 +17,7 @@
 }
 
 body {
+  -webkit-overflow-scrolling: touch;
   /* fonts */
   --fontFamily: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   --fontFamily-title: 'Muller Regular', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
