--- a/ui/molecules/CompanyLogo/CompanyLogo.css
+++ b/ui/molecules/CompanyLogo/CompanyLogo.css
@@ -1,5 +1,7 @@
 .CompanyLogo {
-  width: 100%;
-  max-width: 100px;
-  max-height: 60px;
+  width: 176px;
+  height: 72px;
+
+  margin-right: 16px;
+  border-radius: 8px;
 }
