fix(client): fix styles

--- a/features/client/features/consultation/organisms/AnswerNotification/AnswerNotification.css
+++ b/features/client/features/consultation/organisms/AnswerNotification/AnswerNotification.css
@@ -17,7 +17,8 @@
   font: var(--title-small);
 }
 
-.text { 
+.text {
+  max-width: 520px; 
   margin: 0;
   margin-bottom: 20px;
   color: var(--text-color-secondary);
