--- a/features/landing/organisms/Main/components/Steps/Steps.css
+++ b/features/landing/organisms/Main/components/Steps/Steps.css
@@ -1,7 +1,7 @@
 .steps {
   display: flex;
   justify-content: space-between;
-  max-width: 880px;
+  padding: 0 40px;
   margin: 0 auto;
   margin-bottom: 120px;
 }
