--- a/features/common/modal/index.css
+++ b/features/common/modal/index.css
@@ -2,12 +2,13 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  width: 400px;
+  min-width: 400px;
   min-height: 400px;
   padding: 16px;
   background-color: #fff;
   border-radius: 8px;
-  box-shadow: 0 0 8px 0 rgba(63,63,68,0.04), 0 0 20px 0 rgba(63,63,68,0.12);
+  box-shadow: 0 0 8px 0 rgba(63, 63, 68, 0.04),
+    0 0 20px 0 rgba(63, 63, 68, 0.12);
   transform: translate(-50%, -50%);
 
   @media (--smallDown) {
